# centrallix

./: .cursorrules  .gitconfig  .gitignore  AGENTS.md  LICENSE  README.md
centrallix/: .Makefile.swp  .cvsignore  .depend  .testdepend  AUTHORS  CHANGELOG  Centrallix.kdevelop.pcs  Doxyfile  INSTALL  LICENSE  Makefile  Makefile.in  README  RELNOTES.txt  TODO  aclocal.m4  centrallix.c  centrallix.kdevelop  centrallix.kdevses  centrallix.spec  centrallix.supp  config.h.in  configure  configure.ac  configure.in  copyright_stub.txt  cxpasswd.c  linksign.c  lsmain.c  mkrpm  temp_testrunner.c  test_db_setup.sh  test_obj.c  test_prt.c
centrallix-lib/: .cvsignore  .depend  COPYING  INSTALL  LICENSE  Makefile  Makefile.in  aclocal.m4  asymp-test  centrallix-lib.spec  config.h.in  configure  configure.ac  lcov.info  mkbuild  mkrpm
centrallix-lib/include/: .cvsignore  b+tree.h  bdqs.h  clusters.h  cxlibconfig-all.h.in  cxlibconfig-internal.h.in  cxlibconfig.h  cxlibconfig.h.in  cxsec.h  datatypes.h  exception.h  expect.h  glyph.h  magic.h  memstr.h  mtask.h  mtlexer.h  mtnotify.h  mtsession.h  net_raw_api.h  newmalloc.h  newmalloc_memfail.h  qprintf.h  smmalloc.h  smmalloc_private.h  stparse.h  strtcpy.h  util.h  xarray.h  xhandle.h  xhash.h  xhashqueue.h  xqueue.h  xringqueue.h  xstring.h  xtree.h
centrallix-lib/src/: .b+tree.c.swp  b+tree.c  bdqs_transport.c  charsets.c  clusters.c  cxsec.c  memstr.c  mtask.c  mtlexer.c  mtnotify.c  mtsession.c  net_raw_api.c  newmalloc.c  qprintf.c  smmalloc.c  stparse.c  strtcpy.c  util.c  xarray.c  xhandle.c  xhash.c  xhashqueue.c  xringqueue.c  xstring.c  xtree.c
centrallix-lib/tests/: 14MAR2005_sechigh_optimnone.txt  14MAR2005_secnone_optimyes.txt  README  asymp-test.c  dictionary.txt  mkxtreedata  t_driver.c  test_00baseline.c  test_01baseline.c  test_02baseline.c  test_03baseline.c  test_04baseline.c  test_b+tree2_01.c  test_b+tree2_09.c  test_b+tree3_01.c  test_b+tree3_02.c  test_b+tree3_03.c  test_b+tree3_04.c  test_b+tree3_05.c  test_b+tree3_06.c  test_b+tree3_07.c  test_b+tree3_08.c  test_b+tree3_09.c  test_b+tree3_10.c  test_b+tree3_11.c  test_b+tree3_12.c  test_b+tree3_13.c  test_b+tree3_14.c  test_b+tree3_15.c  test_b+tree3_20.c  test_b+tree3_21.c  test_b+tree3_22.c  test_b+tree3_23.c  test_b+tree3_24.c  test_b+tree3_25.c  test_b+tree3_26.c  test_b+tree3_27.c  test_b+tree3_28.c  test_b+tree3_29.c  test_b+tree3_30.c  (+331 more)
centrallix/application/: app_main.c
centrallix/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
centrallix/clog_src/: clog.c
centrallix/cpp/: attribute.cpp  class_objdrv.cpp  mkobjdrv  objdrv_cppmem.cpp  wrapper.cpp
centrallix/cxss/: cxss_authstack.c  cxss_contextstack.c  cxss_credentials_database.c  cxss_credentials_database.h  cxss_credentials_db.c  cxss_credentials_db.h  cxss_credentials_mgmt.c  cxss_credentials_mgmt.h  cxss_credentials_mgr.c  cxss_credentials_mgr.h  cxss_crypto.c  cxss_crypto.h  cxss_encryption.c  cxss_encryption.h  cxss_entropy.c  cxss_keystream.c  cxss_linksign.c  cxss_main.c  cxss_policy.c  cxss_tlshelper.c  cxss_util.c  cxss_utility.c
centrallix/debug/: Makefile  config.h  config.status  libtool
centrallix/etc/: .cvsignore  INSTALL.txt  centrallix.conf  centrallix.conf.in  centrallix.init.in  charsetmap.cfg  newSecurity.pol  rgb.txt  rootnode.in  security.pol  types.cfg  useragent.cfg
centrallix/expression/: README  exp_compiler.c  exp_double_metaphone.c  exp_evaluate.c  exp_functions.c  exp_generator.c  exp_main.c  exp_params.c
centrallix/htmlgen/: README  Setup  ht_render.c  htdrv_alerter.c  htdrv_autolayout.c  htdrv_button.c  htdrv_calendar.c  htdrv_chart.c  htdrv_checkbox.c  htdrv_checkbox_moz.c  htdrv_clock.c  htdrv_component.c  htdrv_componentdecl.c  htdrv_connector.c  htdrv_datetime.c  htdrv_dropdown.c  htdrv_editbox.c  htdrv_execmethod.c  htdrv_fileupload.c  htdrv_form.c  htdrv_formbar.c  htdrv_formstatus.c  htdrv_frameset.c  htdrv_hints.c  htdrv_html.c  htdrv_image.c  htdrv_imagebutton.c  htdrv_label.c  htdrv_map.c  htdrv_menu.c  htdrv_multiscroll.c  htdrv_objcanvas.c  htdrv_osrc.c  htdrv_page.c  htdrv_page_moz.c  htdrv_pane.c  htdrv_parameter.c  htdrv_radiobutton.c  htdrv_remotectl.c  htdrv_repeat.c  (+17 more)
centrallix/include/: apos.h  application.h  barcode.h  centrallix.h  charsets.h  cxcache.h  double.h  double_metaphone.h  endorsement_utils.h  expression.h  hints.h  hp_font_metrics.h  ht_font_metrics.h  ht_render.h  htmlparse.h  iface.h  iface_private.h  json_util.h  jsvm.h  mergesort.h  mime.h  multiquery.h  net_http.h  net_ldap.h  obfuscate.h  obj.h  objdrv.hpp  param.h  prtmgmt.h  prtmgmt_new.h  prtmgmt_private.h  prtmgmt_v3.h  ptod.h  report.h  st_node.h  st_param.h  stparse.h  stparse_ne.h  wgtr.h
centrallix/java/: Approach.txt  ConvertingStructsToInterfaces.txt  convert-struct.pl  get-struct-names.pl  header-files.txt
centrallix/jsvm/: jsvm_main.c
centrallix/man/: centrallix.8  centrallix.conf.5  test_obj.1
centrallix/multiquery/: multiq_delete.c  multiq_equijoin.c  multiq_insertselect.c  multiq_orderby.c  multiq_projection.c  multiq_tablegen.c  multiq_update.c  multiq_upsert.c  multiquery.c
centrallix/netdrivers/: net_bdqs.c  net_cgi.c  net_http.c  net_http.h  net_http_app.c  net_http_conn.c  net_http_diff.c  net_http_osml.c  net_http_rest.c  net_http_sess.c  net_ldap.c  net_nfs.c  net_raw.c
centrallix/objectsystem/: obj_attr.c  obj_content.c  obj_datatypes.c  obj_inherit.c  obj_main.c  obj_method.c  obj_object.c  obj_observer.c  obj_params.c  obj_query.c  obj_replica.c  obj_rootnode.c  obj_session.c  obj_temp.c  obj_trx.c  obj_types.c
centrallix/osdrivers/: OBJDRV_PROTOTYPE.c  attribute.cpp  class_objdrv.cpp  fake2.c  mkobjdrv  objdrv_audio.c  objdrv_berk.c  objdrv_cluster.c  objdrv_cpp_wrapper.cpp  objdrv_cppmem.cpp  objdrv_datafile.c  objdrv_dbl.c  objdrv_email.c  objdrv_fp.c  objdrv_gzip.c  objdrv_http.c  objdrv_indexfile.c  objdrv_intertel.c  objdrv_json.c  objdrv_link.c  objdrv_mailmsg.c  objdrv_mbox.c  objdrv_mime.c  objdrv_mysql.c  objdrv_nntp.c  objdrv_pdb.c  objdrv_pop3.c  objdrv_pop3_v3.c  objdrv_query.c  objdrv_query_old.c  (+15 more)
(+1439 files in other folders)
